[Mani]-Fixed CSS hover issue in Dark Mode

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -243,7 +243,7 @@ body {
 
 button.clipboard {
   color: var(--main-color);
-  border-radius: 4px;
+  border-radius: 4px 0px 0px 4px;
   height: 100%;
   width: 100%;
   border: transparent;
